committing changes back to repo

--- a/.github/workflows/build-package-deploy-aws.yml
+++ b/.github/workflows/build-package-deploy-aws.yml
@@ -9,7 +9,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ jar_workflow_aws ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -41,3 +41,13 @@ jobs:
           name: "Artifact-${{steps.time.outputs.time}}"
           path: build/libs
           retention-days: 5
+      - name: Beanstalk Deploy fro JAR
+        uses: DylanBDev/beanstalk-deploy@initial
+        with:
+          aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          application_name: SpringBootProdApp
+          environment_name: Springbootprodapp-env
+          version_label: SpringBootProdApp-${{steps.time.outputs.time}}
+          region: us-east-1
+          deployment_package: build/libs/SpringBootProdApplication-0.0.1-SNAPSHOT.jar
