--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ logo.title=Wisdom Pet Medical Clinic
 #management.server.port=9001
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health,info,metrics,loggers
+server.servlet.context-path=/SpringBootProdApplication
 
 #info
 info.application.name=SpringBootProduction
