--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@ plugins {
 	id 'org.springframework.boot' version '2.5.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war'
 }
 
+bootWar {
+	archiveFileName = 'SpringBootProdApplication.war'
+}
 group = 'com.mdrsolutions'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
@@ -18,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'com.google.code.findbugs:jsr305:3.0.2'
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
 	//implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.5.3'
 	//implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.5.3'
